--- a/portfolio-sce.html
+++ b/portfolio-sce.html
@@ -37,14 +37,13 @@
 	       <div class="part part_1"> 	
 	    	<div class="title_inside">SCE Website</div>
 	    	<div class="title_line"></div>
-	    	<div class="design_ui"><span>SCE Website focus on cloud services.<br>The target user be composed of developer and programmer</span></div>
-	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
 	        <div class="web_link"><a href="http://cloudscape.sohu.com" target="_Blank">www.cloudscape.sohu.com</a></div>
 	       </div>
 	       <div class="part part_2">
-	        <div class="title_inside">DESIGN IDEATION</div>
+	        <div class="title_inside">DESIGN PROCESS</div>
 	        <div class="title_line"></div>
 	        <div class="number_box nb">1</div>
+	        <div class="design_title">Ideation</div>
 	        <div class="design_ui"><span>Our Target</span></div>
             <div class="design_img" id="sceimg"><img src="img/sce2.jpg"></div>
             <div class="design_img"><img src="img/sce1.jpg"></div>
