--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 					<div class="box" id="b_box">
 				  		<div class="img-title"><span>SoHu Film Website</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">See Project</span></div>
+			  				<div class="head-img"><span class="head-img-name">UI & UX Design</span></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -55,9 +55,9 @@
 				<li class="img-box" id="box_2">
 					<a href="portfolio-seeword.html"><img id="m-img" src="img/2.png"></a>
 					<div class="box">
-				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
+				  		<div class="img-title"><span>See Word Reading Website</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
+			  				<div class="head-img"><span class="head-img-name">UI & UX Design</span></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -65,9 +65,9 @@
 				<li class="img-box">
 					<a href="portfolio-mila.html"><img src="img/3.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<a href="../html/inset.html"><div class="img-title"><span>Mila Coffee Website</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">UI Design & Front End Program</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -75,9 +75,9 @@
 				<li class="img-box">
 					<a href="portfolio-sce.html"><img src="img/4.png"></a>
 					<div class="box">
-				  		<div class="img-title"><span>seeword</span></div>
+				  		<div class="img-title"><span>SCE Website</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
+			  				<div class="head-img"><span class="head-img-name">UI & UX Design</span></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -85,9 +85,9 @@
 				<li class="img-box">
 					<a href="portfolio-sohufan.html"><img src="img/5.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<a href="../html/inset.html"><div class="img-title"><span>Dramas Fans APP</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">UI & UX Design</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -95,19 +95,19 @@
 				<li class="img-box" id="img-box-b">
 					<a href="portfolio-sohublog.html"><img id="b-img" src="img/sohublog.png"></a>
 					<div class="box" id="b_box">
-				  		<div class="img-title"><span>See Word Reading Project</span></div>
+				  		<div class="img-title"><span>UED Blog Website</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">See Project</span></div>
+			  				<div class="head-img"><span class="head-img-name">UI & Research</span></div>
 			  			</div>
 				  	</div>
 				</li>
 
 				<li class="img-box" id="box_mobile">
-					<a href="portfolio-player.html"><img id="m-img" src="img/iphone.gif"></a>
+					<a href="portfolio-player.html"><img id="m-img" src="img/players.png"></a>
 					<div class="box">
-				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
+				  		<div class="img-title"><span>Circle Player</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
+			  				<div class="head-img"><span class="head-img-name">UI & Motion</span></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -115,9 +115,9 @@
 				<li class="img-box">
 					<a href="portfolio-xiaomi.html"><img src="img/xiaomi.png"></a>
 					<div class="box">
-				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
+				  		<div class="img-title"><span>XiaoMi Icon</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
+			  				<div class="head-img"><span class="head-img-name">UI</span></div>
 			  			</div>
 				  	</div>
 				</li>
