--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
 				<li class="img-box">
 					<a href="portfolio-mila.html"><img src="img/3.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>Mila Coffee Website</span></div></a>
+				  		<div class="img-title"><span>Mila Coffee Website</span></div>
 			  			<div class="sub-img-title">
 			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">UI Design & Front End Program</span></a></div>
 			  			</div>
@@ -85,7 +85,7 @@
 				<li class="img-box">
 					<a href="portfolio-sohufan.html"><img src="img/5.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>Dramas Fans APP</span></div></a>
+				  		<div class="img-title"><span>Dramas Fans APP</span></div>
 			  			<div class="sub-img-title">
 			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">UI & UX Design</span></a></div>
 			  			</div>
