--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -38,8 +38,8 @@
 	    	<div class="title_inside">SoHu Film Website</div>
 	    	<div class="title_line"></div>
 	        <div class="web_link"><a href="http://film.sohu.com" target="_Blank">Live:  www.film.sohu.com</a></div>
-	        <div class="design_ui"><span>Provide a better online <em>movie-going experience</em></span></div>
-		        <div class="design_p"><span></span></div>
+	        <div class="design_ui"><span>Provide a better online <em>Movie-Going EXPERIENCE</em></span></div>
+		        <div class="design_p"><span>SoHu Film Website is a website which provided premium movies. Early in the project, I responsible for user research and imporve the user experience. Later, I responsible for interaction design and front-end program.</span></div>
 	        </div>
 	       <div class="part part_2">
 	        <div class="title_inside">DESIGN PROCESS</div>
