--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -50,8 +50,7 @@
 		        <div class="design_ui"><span>What problems we have?</span></div>
 		        <div class="design_img"><img src="img/seeword2.png"></div>
 		        <div class="number_box nb">2</div>
-		        <div class="design_title">Ideation</div>
-		        <div class="design_ui"><span>Solution</span></div>
+		        <div class="design_title">Solution</div>
 		        <div class="design_img"><img src="img/seeword5.png"></div>
 		        <div class="design_ui"><span>Information structure</span></div>
 		        <div class="design_img"><img src="img/seeword3.png"></div>
@@ -61,7 +60,7 @@
 		        <div class="design_title">Refine</div>
 		        <div class="design_img"><img src="img/seeword6.png"></div>
 		        <div class="number_box nb">4</div>
-		        <div class="design_title">Final Phototype</div>
+		        <div class="design_title">Final Prototype</div>
 	            <div class="design_img"><img src="img/seeword1.jpg"></div>
 	        </div>
 	        <div class="part part_5">    
