--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -61,10 +61,9 @@
 		        <div class="design_img"><img src="img/seeword6.png"></div>
 		        <div class="number_box nb">4</div>
 		        <div class="design_title">Final Prototype</div>
-	            <div class="design_img"><img src="img/seeword1.jpg"></div>
-	        </div>
-	        <div class="part part_5">    
-	            <div class="design_img"><img src="img/seeword2.jpg"></div>
+	            <div class="design_img"><img src="img/seeword1.jpg"></div>  
+	            <div class="design_img"><img src="img/seeword7.png"></div>
+	            <div class="design_img"><img src="img/seeword8.png"></div>
             </div>
 	      </div>  
 	    </div>
