--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -44,20 +44,24 @@
 	       <div class="part part_2">
 	        <div class="title_inside">DESIGN PROCESS</div>
 	        <div class="title_line"></div>
-	        <div class="design_img"><img src="img/filmin.jpg"></div>
+	        <div class="design_img"><img src="img/film.png"></div>
 	        <div class="number_box nb">1</div>
 	        <div class="design_title">Research</div>
-	        <div class="design_ui"><span>Interview the target users,<br>Find out required and get the suggest from them</span></div>
-	        <div class="design_img"><img src="img/filmin.jpg"></div>
+	        <div class="design_p"><span>Interview the target users, Find out some problems and get the suggests from them. We divided problems into <em>Three Categorise</em></span></div>
+	        <div class="design_img"><img src="img/film1.png"></div>
 	        <div class="number_box nb">2</div>
-	        <div class="design_ui"><span>Figure out how to solve the problems</span></div>
-	        <div class="design_img"><img src="img/filmin2.jpg"></div>
+	        <div class="design_title">Ideation</div>
+	        <div class="design_ui"><span>Information Structure</span></div>
+	        <div class="design_img"><img src="img/film3.png"></div>
+	        <div class="design_ui"><span>Wireframe AND Prototype</span></div>
+	        <div class="design_img"><img src="img/film4.png"></div>
 	        <div class="number_box nb">3</div>
-	        <div class="design_ui"><span>Visual Prototype</span></div>
+	        <div class="design_title">Evaluate</div>
+            <div class="number_box nb">4</div>
+	        <div class="design_title">Visual Prototype</div>
             <div class="design_img"><img src="img/film1.jpg"></div>
             <div class="design_img"><img src="img/film2.jpg"></div>
             <div class="design_img"><img src="img/film3.jpg"></div>
-            
            </div>
            </div>
 	      </div>  
