--- a/portfolio-sohufan.html
+++ b/portfolio-sohufan.html
@@ -33,26 +33,28 @@
 
 	    <div class="main_design_container">
 	      <div class="container_box cb_fans">
-	    	<div class="number_box">1</div>
-	    	<div class="title_inside">SoHu American Dramas Fans APP</div>
+	       <div class="part part_1">
+	    	<div class="title_inside">SoHu Dramas Fans APP</div>
 	    	<div class="title_line"></div>
-	        <div class="respon_work"><span>UI design + framework</span></div>
-	        <div class="web_link">Online Soon</div>
-
+	    	 <div class="design_ui"><span>Providing a platform for fans who like the films, movies or dramas</span></div>
+	        </div>
+	       <div class="part part_2">
 	        <div class="number_box nb">2</div>
 	        <div class="title_inside"> UI DESIGN</div>
 	        <div class="title_line"></div>
 	        <div class="design_ui"><span>A Combination of Flat and Blur<br>
 for an Simple and Clearly.</span></div>
             <div class="design_img"><img src="img/fans1.jpg"></div>
-
+           </div>
+           <div class="part part_3"> 
             <div class="number_box nb">3</div>
 	        <div class="title_inside"> Framework</div>
 	        <div class="title_line"></div>
 	        <div class="design_ui"><span></span></div>
             <div class="design_img"><img src="img/fans.jpg"></div>
             <div class="design_img"><img src="img/fans2.jpg"></div>
-	      </div>  
+	      </div>
+	      </div> 
 	    </div>
     
     <div id="go-top">
