--- a/portfolio-sohufan.html
+++ b/portfolio-sohufan.html
@@ -36,9 +36,11 @@
 	       <div class="part part_1">
 	    	<div class="title_inside">SoHu Dramas Fans APP</div>
 	    	<div class="title_line"></div>
-	    	 <div class="design_ui"><span>Providing a platform for fans who like the films, movies or dramas</span></div>
+	    	 <div class="design_ui"><span>Providing a <em>COMMUNICATION PLATFORM</em> for fans which like dramas</span></div>
 	        </div>
 	       <div class="part part_2">
+	       	 <div class="title_inside">DESIGN PROCESS</div>
+	        <div class="title_line"></div>
 	        <div class="number_box nb">2</div>
 	        <div class="title_inside"> UI DESIGN</div>
 	        <div class="title_line"></div>
