--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the biggest Interne
 				<li class="img-box" id="img-box-b">
 					<a href="portfolio-sohufilm.html"><img id="b-img" src="img/1.png"></a>
 					<div class="box" id="b_box">
-				  	 <div class="img-title"><span>See Word Reading Project</span></div>
+				  	 <div class="img-title"><span>SoHu Film Website</span></div>
 			  			<div class="sub-img-title">
 			  				<div class="head-img"><span class="head-img-name">See Project</span></div>
 			  			</div>
@@ -57,9 +57,9 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the biggest Interne
 				<li class="img-box" id="box_2">
 					<a href="portfolio-seeword.html"><img id="m-img" src="img/2.png"></a>
 					<div class="box">
-				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
+				  		<div class="img-title"><span>See Word Reading Project</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
+			  				<div class="head-img"><span class="head-img-name">See Project</span></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -67,9 +67,9 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the biggest Interne
 				<li class="img-box">
 					<a href="portfolio-mila.html"><img src="img/3.png"></a>
 					<div class="box">
-				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
+				  		<div class="img-title"><span>MiLa Coffee Website</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
+			  				<div class="head-img"><span class="head-img-name">See Project</span></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -77,9 +77,9 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the biggest Interne
 				<li class="img-box">
 					<a href="portfolio-sce.html"><img src="img/4.png"></a>
 					<div class="box">
-				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
+				  		<div class="img-title"><span>SCE Website</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
+			  				<div class="head-img"><span class="head-img-name">See Project</span></div>
 			  			</div>
 				  	</div>
 				</li>
@@ -87,9 +87,9 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the biggest Interne
 				<li class="img-box">
 					<a href="portfolio-sohufan.html"><img src="img/5.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<a href="../html/inset.html"><div class="img-title"><span>SoHu Dramas Fans App</span></div></a>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">See Project</span></a></div>
 			  			</div>
 				  	</div>
 				</li>
