--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="intro_infor intro_infor_index">
 				<div class="intro_infor_left"><span>Hello</span></div>
 				<div class="intro_infor_right"><p>My name is <em>Shuai</em>, from University fo Cincinnati, DAAP College. 
-I focus on UI & UX design. I was worked for Sohu.com, one of the biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
+I focus on <em>UI & UX </em>design. I was worked for Sohu.com, one of the biggest Internet Company in China. Our team has notched up 2 Billion views to date in June 23 2014.</p></div>
 			</div>
 		</div>
 
