--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -53,7 +53,7 @@
 	        <div class="design_title">Ideation</div>
 	        <div class="design_ui"><span>Information Structure</span></div>
 	        <div class="design_img"><img src="img/film2.png"></div>
-	        <div class="design_ui"><span>Wireframe AND Prototype</span></div>
+	        <div class="design_ui"><span>Wireframe and Prototype</span></div>
 	        <div class="design_img"><img src="img/film4.png"></div>
 	        <div class="number_box nb">3</div>
 	        <div class="design_title">Evaluate</div>
