--- a/portfolio-mila.html
+++ b/portfolio-mila.html
@@ -22,6 +22,7 @@
 				<a href="index.html"><img src="img/logo.png"></a>
 			</div>
 				<ul class="menu">
+					<li><a href="index.html" >ABOUT ME</a></li>
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
 				</ul>
