--- a/portfolio-sohufan.html
+++ b/portfolio-sohufan.html
@@ -68,7 +68,7 @@ for an Simple and Clearly.</span></div>
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
-	        			<li class="lik"><span class="phone"><a href="">917-545-2916</a></span></li>
+	        			<li class="lik"><span class="phone"><a href="tel:9175452916">917-545-2916</a></span></li>
 	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
 	        		  </ul>
 	        	</div>
