--- a/portfolio.html
+++ b/portfolio.html
@@ -24,14 +24,16 @@
 				<ul class="menu">
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
+					<li><a href="myself.html" >ABOUT ME</a></li>
 				</ul>
 		</div>
 		</div>
 
-		<div class="intro intro_portfolio">
-			<div class="intro_infor">
-				<div class="intro_infor_left"><span id="gre">Portfolio</span></div>
-				<div class="intro_infor_right"><p>I have worked on some website & APP. Regardless of what kind of website or App I partner with, I pride myself on consistently delivering work of the highest quality. Here are a selection of the projects I've worked on recently.</p></div>
+		<div class="title_header title_header_portfoilo">
+			<div class="sub_th_1">
+				<p class="p1"><b class="b1">M</b><b class="b2">Y</b></p>
+				<p class="p4">Learn more about what I do</p>
+				<p class="p2"></p>
 			</div>
 		</div>
 
@@ -40,90 +42,52 @@
 		</div>
 
 		<div class="container">
-		<div class="waterfall">
-			<ul class="img-list">
-				<li class="img-box" id="img-box-b">
-					<a href="portfolio-sohufilm.html"><img id="b-img" src="img/1.png"></a>
-					<div class="box" id="b_box">
-				  		<div class="img-title"><span>SoHu Film Website</span></div>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">UI & UX Design</span></div>
-			  			</div>
-				  	</div>
-				</li>
 
-				<li class="img-box" id="box_2">
-					<a href="portfolio-seeword.html"><img id="m-img" src="img/2.png"></a>
-					<div class="box">
-				  		<div class="img-title"><span>See Word Reading Website</span></div>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">UI & UX Design</span></div>
-			  			</div>
-				  	</div>
-				</li>
+			<div class="portfolio_content portfolio_content_left">
+			  <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/1s.png"></a></div>	
+			  <div class="copy title-border1">
+                        <div class="inner">
+                            <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">SoHu Film Website</a></h2>
+                            <span class="headingline"></span>
+							<div class="meta"><p>User Research / User Experience Design/ User Interface / Front-end Develop</p></div>
+							<figure class="quote meta">
+                                <blockquote class="heading6"> SoHu Film Website is a website which provided the premium movies. Our objective is to improve a better online Movie-Going experience. </blockquote>
+                            </figure>
+							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
+                        </div>
+            </div>
+            </div>
 
-				<li class="img-box">
-					<a href="portfolio-mila.html"><img src="img/3.png"></a>
-					<div class="box">
-				  		<div class="img-title"><span>Mila Coffee Website</span></div>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">UI Design & Front End Program</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
+            <div class="portfolio_content portfolio_content_right">
+			  <div class="copy title-border1">
+                        <div class="inner">
+                            <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">See Word Reading Project</a></h2>
+                            <span class="headingline"></span>
+							<div class="meta"><p>User Research / User Experience / User Interface / Front-end Develop</p></div>
+							<figure class="quote meta">
+                                <blockquote class="heading6"> for me to update products and information. It was great to use one company for everything. I would strongly recommend them to anyone wanting a top quality website. </blockquote>
+                            </figure>
+							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
+                        </div>
+            </div>
+            <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/4.png"></a></div>	
+            </div>
 
-				<li class="img-box">
-					<a href="portfolio-sce.html"><img src="img/4.png"></a>
-					<div class="box">
-				  		<div class="img-title"><span>SCE Website</span></div>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">UI & UX Design</span></div>
-			  			</div>
-				  	</div>
-				</li>
+            <div class="portfolio_content portfolio_content_left">
+			  <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/6.png"></a></div>	
+			  <div class="copy title-border1">
+                        <div class="inner">
+                            <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">SoHu Film Website</a></h2>
+                            <span class="headingline"></span>
+							<div class="meta"><p>User Interface</p></div>
+							<figure class="quote meta">
+                                <blockquote class="heading6"> for me to update products and information. It was great to use one company for everything. I would strongly recommend them to anyone wanting a top quality website. </blockquote>
+                            </figure>
+							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
+                        </div>
+            </div>
+            </div>
 
-				<li class="img-box">
-					<a href="portfolio-sohufan.html"><img src="img/5.png"></a>
-					<div class="box">
-				  		<div class="img-title"><span>Dramas Fans APP</span></div>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">UI & UX Design</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
-
-				<li class="img-box" id="img-box-b">
-					<a href="portfolio-sohublog.html"><img id="b-img" src="img/sohublog.png"></a>
-					<div class="box" id="b_box">
-				  		<div class="img-title"><span>UED Blog Website</span></div>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">UI & Research</span></div>
-			  			</div>
-				  	</div>
-				</li>
-
-				<li class="img-box" id="box_mobile">
-					<a href="portfolio-player.html"><img id="m-img" src="img/players.png"></a>
-					<div class="box">
-				  		<div class="img-title"><span>Circle Player</span></div>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">UI & Motion</span></div>
-			  			</div>
-				  	</div>
-				</li>
-
-				<li class="img-box">
-					<a href="portfolio-xiaomi.html"><img src="img/xiaomi.png"></a>
-					<div class="box">
-				  		<div class="img-title"><span>XiaoMi Icon</span></div>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><span class="head-img-name">UI</span></div>
-			  			</div>
-				  	</div>
-				</li>
-
-			</ul>
-		</div>
 	</div>
 </div>
 
@@ -136,8 +100,9 @@
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
-	        			<li class="lik"><span class="phone"><a href="">917-545-2916</a></span></li>
-	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
+	        			<li class="lik"><span class="linkein"><a href="https://www.linkedin.com/pub/shuai-zhou/b2/729/898" target="value"></a></span></li>
+	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com"></a></span></li>
+	        			<li class="lik"><span class="phone"><a href="tel:9175452916"></a></span>
 	        		  </ul>
 	        	</div>
         	</div>	
