--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,7 @@
 				<a href="index.html"><img src="img/logo.png"></a>
 			</div>
 				<ul class="menu">
+					<li><a href="index.html" >ABOUT ME</a></li>
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
 					<li class="selected2"><a href="resume.html">RESUME</a></li>
 				</ul>
@@ -127,12 +128,13 @@
 <!--到顶部的按钮-->
 <div id="go-top" class="go-top"><a href="#"><span></span></a></div>
 <!--底页-->
-      <div class="footer">
+    <div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
-	        			<li class="lik"><span class="phone"><a href="">917-545-2916</a></span></li>
-	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
+	        			<li class="lik"><span class="linkein"><a href="https://www.linkedin.com/pub/shuai-zhou/b2/729/898" target="value"></a></span></li>
+	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com"></a></span></li>
+	        			<li class="lik"><span class="phone"><a href="tel:9175452916"></a></span>
 	        		  </ul>
 	        	</div>
         	</div>	
