--- a/portfolio-player.html
+++ b/portfolio-player.html
@@ -22,6 +22,7 @@
 				<a href="index.html"><img src="img/logo.png"></a>
 			</div>
 				<ul class="menu">
+					<li><a href="index.html" >ABOUT ME</a></li>
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
 				</ul>
@@ -65,7 +66,7 @@
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
-	        			<li class="lik"><span class="phone"><a href="">917-545-2916</a></span></li>
+	        			<li class="lik"><span class="phone"><a href="tel:9175452916">917-545-2916</a></span></li>
 	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
 	        		  </ul>
 	        	</div>
