--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -52,7 +52,7 @@
 	        <div class="number_box nb">2</div>
 	        <div class="design_title">Ideation</div>
 	        <div class="design_ui"><span>Information Structure</span></div>
-	        <div class="design_img"><img src="img/film2.png"></div>
+	        <div class="design_img_high"><img src="img/film2.png"></div>
 	        <div class="design_ui"><span>Wireframe and Prototype</span></div>
 	        <div class="design_img"><img src="img/film4.png"></div>
 	        <div class="number_box nb">3</div>
@@ -77,7 +77,7 @@
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
-	        			<li class="lik"><span class="phone"><a href="">917-545-2916</a></span></li>
+	        			<li class="lik"><span class="phone"><a href="tel:9175452916">917-545-2916</a></span></li>
 	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
 	        		  </ul>
 	        	</div>
