--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
     <meta content="telephone=no" name="format-detection"/>
@@ -36,7 +37,7 @@
 		<div class="title_header">
 
 			<div id="content">
-			<div>
+			<div class="canvas_img">
 				<canvas id="background" data-processing-sources="background.pde" width="650" height="450" tabindex="0" style="image-rendering: -webkit-optimize-contrast !important;">
 					<p>Your browser does not support the canvas tag.</p>
 					<!-- Note: you can put any alternative content here. -->
