--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             	 <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/4.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-seeword.html" title="SoHu Film Website">See Word Reading Project</a></h2>
+                            <h2 class="heading2"><a href="portfolio-seeword.html" title="SoHu Film Website">See Word Reading</a></h2>
                             <span class="headingline"></span>
 							<div class="meta"><p>User Research / User Experience / User Interface / Front-end Develop</p></div>
 							<figure class="quote meta">
@@ -106,7 +106,7 @@
             	 <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/4.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-seeword.html" title="SoHu Film Website">See Word Reading Project</a></h2>
+                            <h2 class="heading2"><a href="portfolio-seeword.html" title="SoHu Film Website">See Word Reading</a></h2>
                             <span class="headingline"></span>
 							<div class="meta"><p>User Research / User Experience / User Interface / Front-end Develop</p></div>
 							<figure class="quote meta">
