--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 		</div>
 
 		<div class="container" id="project_intro">
+
+			<section class="container_piece container_piece_1">
 			<div class="portfolio_content portfolio_content_left">
 			  <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/1s.png"></a></div>	
 			  <div class="copy title-border1">
@@ -69,9 +71,12 @@
                             </figure>
 							 <a href="portfolio-sohufilm.html" title="Sohu film Web Design Project" class="btn btn1">View Project</a>
                         </div>
+              </div>
             </div>
-            </div>
+            </section>
 
+
+            <section class="container_piece container_piece_2">
             <div class="portfolio_content portfolio_content_right">
             	 <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/4.png"></a></div>	
 			  <div class="copy title-border1">
@@ -84,8 +89,9 @@
                             </figure>
 							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
                         </div>
+               </div>
             </div>
-            </div>
+            </section>
 
             <div class="portfolio_content portfolio_content_left">
 			  <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/6.png"></a></div>	
