--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<div id="content">
 			<div class="canvas_img">
-				<canvas class="background" id="background" data-processing-sources="background.pde" tabindex="0" style="image-rendering: -webkit-optimize-contrast !important;">
+				<canvas class="ani" id="background" data-processing-sources="background.pde" tabindex="0" style="image-rendering: -webkit-optimize-contrast !important;">
 					<p>Your browser does not support the canvas tag.</p>
 					<!-- Note: you can put any alternative content here. -->
 				</canvas>
