--- a/resume.html
+++ b/resume.html
@@ -22,17 +22,18 @@
 				<a href="index.html"><img src="img/logo.png"></a>
 			</div>
 				<ul class="menu">
-					<li><a href="index.html" >ABOUT ME</a></li>
-					<li><a href="portfolio.html">PORTFOLIO</a></li>
-					<li class="selected2"><a href="resume.html">RESUME</a></li>
+					<ul class="menu menu_resume">
+					<li><a href="#project_intro">PORTFOLIO</a></li>
+					<li><a href="resume.html">RESUME</a></li>
+					<li class="selected"><a href="myself.html" >ABOUT ME</a></li>
+				</ul>
 				</ul>
 		</div>
 		</div>
 
-		<div class="intro intro_portfolio">
-			<div class="intro_infor">
-				<div class="intro_infor_left"><a href="img/ShuaiZhou_resume.pdf" target="_self"><span id="red"> Download </span></a></div>
-				<div class="intro_infor_right"></div>
+		<div class="intro">
+			<div class="intro_resume">
+				<div class="intro_resume_download"><a href="img/ShuaiZhou_resume.pdf" target="_self"><span id="red"> Download </span></a></div>
 			</div>
 		</div>
 
