--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 			</div>
 				<ul class="menu">
 					<ul class="menu menu_resume">
-					<li><a href="#project_intro">PORTFOLIO</a></li>
+					<li><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
 					<li class="selected"><a href="myself.html" >ABOUT ME</a></li>
 				</ul>
