--- a/resume.html
+++ b/resume.html
@@ -24,8 +24,8 @@
 				<ul class="menu">
 					<ul class="menu menu_resume">
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
-					<li><a href="resume.html">RESUME</a></li>
-					<li class="selected"><a href="myself.html" >ABOUT ME</a></li>
+					<li class="selected"><a href="resume.html">RESUME</a></li>
+					<li><a href="myself.html" >ABOUT ME</a></li>
 				</ul>
 				</ul>
 		</div>
