--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<figure class="quote meta">
                                 <blockquote class="heading6"> for me to update products and information. It was great to use one company for everything. I would strongly recommend them to anyone wanting a top quality website. </blockquote>
                             </figure>
-							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
+							 <a href="portfolio-seeword.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
                         </div>
                </div>
             </div>
