--- a/portfolio.html
+++ b/portfolio.html
@@ -53,13 +53,13 @@
             <div class="portfolio_content portfolio_content_right">
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">See Word Reading Project</a></h2>
+                            <h2 class="heading2"><a href="portfolio-seeword.html" title="SoHu Film Website">See Word Reading</a></h2>
                             <span class="headingline"></span>
 							<div class="meta"><p>User Research / User Experience / User Interface / Front-end Develop</p></div>
 							<figure class="quote meta">
                                 <blockquote class="heading6"> for me to update products and information. It was great to use one company for everything. I would strongly recommend them to anyone wanting a top quality website. </blockquote>
                             </figure>
-							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
+							 <a href="portfolio-seeword.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
                         </div>
             </div>
             <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/4.png"></a></div>	
