--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			  <div class="copy title-border1">
                         <div class="inner">
                             <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">SoHu Film Website</a></h2>
-                            <span class="headingline"></span>
+                            <span class="headingline headingline_film"></span>
 							<div class="meta"><p>User Research / User Experience Design/ User Interface / Front-end Develop</p></div>
 							<figure class="quote meta">
                                 <blockquote class="heading6"> SoHu Film Website is a website which provided the premium movies. Our objective is to improve a better online Movie-Going experience. </blockquote>
@@ -82,12 +82,12 @@
 			  <div class="copy title-border1">
                         <div class="inner">
                             <h2 class="heading2"><a href="portfolio-seeword.html" title="SoHu Film Website">See Word Reading</a></h2>
-                            <span class="headingline"></span>
+                            <span class="headingline headingline_see"></span>
 							<div class="meta"><p>User Research / User Experience / User Interface / Front-end Develop</p></div>
 							<figure class="quote meta">
                                 <blockquote class="heading6"> for me to update products and information. It was great to use one company for everything. I would strongly recommend them to anyone wanting a top quality website. </blockquote>
                             </figure>
-							 <a href="portfolio-seeword.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
+							 <a href="portfolio-seeword.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn2">View Project</a>
                         </div>
                </div>
             </div>
@@ -98,12 +98,12 @@
 			  <div class="copy title-border1">
                         <div class="inner">
                             <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">SoHu Film Website</a></h2>
-                            <span class="headingline"></span>
+                            <span class="headingline headingline_music"></span>
 							<div class="meta"><p>User Interface</p></div>
 							<figure class="quote meta">
                                 <blockquote class="heading6"> for me to update products and information. It was great to use one company for everything. I would strongly recommend them to anyone wanting a top quality website. </blockquote>
                             </figure>
-							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
+							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn3">View Project</a>
                         </div>
             </div>
             </div>
