--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -24,6 +24,7 @@
 				<ul class="menu">
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
+					<li><a href="myself.html" >ABOUT ME</a></li>
 				</ul>
 		</div>
 		</div>
@@ -77,8 +78,9 @@
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
-	        			<li class="lik"><span class="phone"><a href="tel:9175452916">917-545-2916</a></span></li>
-	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
+	        			<li class="lik"><span class="linkein"><a href="https://www.linkedin.com/pub/shuai-zhou/b2/729/898" target="value"></a></span></li>
+	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com"></a></span></li>
+	        			<li class="lik"><span class="phone"><a href="tel:9175452916"></a></span>
 	        		  </ul>
 	        	</div>
         	</div>	
