--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <section class="container_piece container_piece_2">
             <div class="portfolio_content portfolio_content_right">
-            	 <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/4.png"></a></div>	
+            	 <div class="portfolio_content_img"><a href="portfolio-seeword.html"><img src="img/4.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
                             <h2 class="heading2"><a href="portfolio-seeword.html" title="SoHu Film Website">See Word Reading</a></h2>
@@ -94,16 +94,16 @@
             </section>
 
             <div class="portfolio_content portfolio_content_left">
-			  <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/6.png"></a></div>	
+			  <div class="portfolio_content_img"><a href="portfolio-player.html"><img src="img/6.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">SoHu Film Website</a></h2>
+                            <h2 class="heading2"><a href="portfolio-player.html" title="SoHu Film Website">SoHu Film Website</a></h2>
                             <span class="headingline headingline_music"></span>
 							<div class="meta"><p>User Interface</p></div>
 							<figure class="quote meta">
                                 <blockquote class="heading6"> for me to update products and information. It was great to use one company for everything. I would strongly recommend them to anyone wanting a top quality website. </blockquote>
                             </figure>
-							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn3">View Project</a>
+							 <a href="portfolio-player.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn3">View Project</a>
                         </div>
             </div>
             </div>
@@ -112,13 +112,13 @@
             	 <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/4.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-seeword.html" title="SoHu Film Website">See Word Reading</a></h2>
+                            <h2 class="heading2"><a href="portfolio-player.html" title="SoHu Film Website">See Word Reading</a></h2>
                             <span class="headingline"></span>
 							<div class="meta"><p>User Research / User Experience / User Interface / Front-end Develop</p></div>
 							<figure class="quote meta">
                                 <blockquote class="heading6"> for me to update products and information. It was great to use one company for everything. I would strongly recommend them to anyone wanting a top quality website. </blockquote>
                             </figure>
-							 <a href="portfolio-sohufilm.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
+							 <a href="portfolio-player.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn1">View Project</a>
                         </div>
             </div>
             </div>
