--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><img src="img/logo.png"></a>
+				<a href="index.html"><span class="logo_img"></span></a>
 			</div>
 				<ul class="menu">
 					<li class="selected"><a href="#project_intro">PORTFOLIO</a></li>
