--- a/myself.html
+++ b/myself.html
@@ -19,12 +19,12 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><img src="img/logo.png"></a>
+				<a href="index.html"><span class="logo_img"></span></a>
 			</div>
-				<ul class="menu">
-					<li class="selected0"><a href="index.html" >ABOUT ME</a></li>
+				<ul class="menu menu_myself">
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
+					<li class="selected"><a href="myself.html" >ABOUT ME</a></li>
 				</ul>
 		</div>
 		</div>
