--- a/portfolio-player.html
+++ b/portfolio-player.html
@@ -19,7 +19,7 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><img src="img/logo.png"></a>
+				<a href="index.html"><span class="logo_img"></span></a>
 			</div>
 				<ul class="menu">
 					<li><a href="index.html" >ABOUT ME</a></li>
