--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><img src="img/logo.png"></a>
-			</div>
-				<ul class="menu">
+                <a href="index.html"><span class="logo_img"></span></a>
+            </div>
+				<ul class="menu menu_portfolio">
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
 					<li><a href="myself.html" >ABOUT ME</a></li>
