--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><img src="img/logo.png"></a>
+				<a href="index.html"><span class="logo_img"></span></a>
 			</div>
 				<ul class="menu menu_resume">
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
