--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -42,24 +42,28 @@
 	        <div class="design_ui"><span>Provide a better online <em>Movie-Going EXPERIENCE</em></span></div>
 		        <div class="design_p"><span>SoHu Film Website is a website which provided premium movies. Early in the project, I responsible for user research and imporve the user experience. Later, I responsible for interaction design and front-end program.</span></div>
 	        </div>
+
 	       <div class="part part_2">
 	        <div class="title_inside">DESIGN PROCESS</div>
 	        <div class="title_line"></div>
 	        <div class="design_img"><img src="img/film.png"></div>
-	        <div class="number_box nb">1</div>
+	        <div class="number_box">1</div>
 	        <div class="design_title">Research</div>
 	        <div class="design_p"><span>Interview the target users, Find out some problems and get the suggests from them. We divided problems into <em>Three Categorise</em></span></div>
 	        <div class="design_img"><img src="img/film1.png"></div>
-	        <div class="number_box nb">2</div>
+
+	        <section class="film_box">
+	        <div class="number_box">2</div>
 	        <div class="design_title">Ideation</div>
 	        <div class="design_ui"><span>Information Structure</span></div>
 	        <div class="design_img_high"><img src="img/film2.png"></div>
 	        <div class="design_ui"><span>Wireframe and Prototype</span></div>
 	        <div class="design_img"><img src="img/film4.png"></div>
-	        <div class="number_box nb">3</div>
+	        </section>
+	        <div class="number_box">3</div>
 	        <div class="design_title">Evaluate</div>
 	        <div class="design_img"><img src="img/film5.png"></div>
-            <div class="number_box nb">4</div>
+            <div class="number_box">4</div>
 	        <div class="design_title">Visual Prototype</div>
             <div class="design_img"><img src="img/film1.jpg"></div>
             <div class="design_img"><img src="img/film2.jpg"></div>
