--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<a href="index.html"><span class="logo_img"></span></a>
 			</div>
 				<ul class="menu">
-					<li class="selected"><a href="#project_intro">PORTFOLIO</a></li>
+					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
 					<li><a href="myself.html" >ABOUT ME</a></li>
 				</ul>
@@ -81,7 +81,7 @@
             	 <div class="portfolio_content_img"><a href="portfolio-seeword.html"><img src="img/4.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-seeword.html" title="SoHu Film Website">See Word Reading</a></h2>
+                            <h2 class="heading2"><a href="portfolio-seeword.html" title="See Word Reading Project">See Word Reading</a></h2>
                             <span class="headingline headingline_see"></span>
 							<div class="meta"><p>User Research / User Experience / User Interface / Front-end Develop</p></div>
 							<figure class="quote meta">
