--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -47,12 +47,15 @@
 	        <div class="title_inside">DESIGN PROCESS</div>
 	        <div class="title_line"></div>
 	        <div class="design_img"><img src="img/film.png"></div>
+
+	        <section class="film_box film_box_1">
 	        <div class="number_box">1</div>
 	        <div class="design_title">Research</div>
 	        <div class="design_p"><span>Interview the target users, Find out some problems and get the suggests from them. We divided problems into <em>Three Categorise</em></span></div>
 	        <div class="design_img"><img src="img/film1.png"></div>
+	        </section>
 
-	        <section class="film_box">
+	        <section class="film_box film_box_2">
 	        <div class="number_box">2</div>
 	        <div class="design_title">Ideation</div>
 	        <div class="design_ui"><span>Information Structure</span></div>
@@ -60,14 +63,20 @@
 	        <div class="design_ui"><span>Wireframe and Prototype</span></div>
 	        <div class="design_img"><img src="img/film4.png"></div>
 	        </section>
+
+	        <section class="film_box film_box_3">
 	        <div class="number_box">3</div>
 	        <div class="design_title">Evaluate</div>
 	        <div class="design_img"><img src="img/film5.png"></div>
+	        </section>
+
+	        <section class="film_box film_box_4">
             <div class="number_box">4</div>
 	        <div class="design_title">Visual Prototype</div>
             <div class="design_img"><img src="img/film1.jpg"></div>
             <div class="design_img"><img src="img/film2.jpg"></div>
             <div class="design_img"><img src="img/film3.jpg"></div>
+            </section>
            </div>
            </div>
 	      </div>  
